--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
         <h1>testing out github</h1>
         <h2>hey there</h2>
         <h3>heyyyyyy</h3>
+        <button onclick="but"></button>
     </body>
 </html>
