--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     </head>
     <body>
         <h1>testing out github</h1>
-        <h2>hey there</h2>
+        <h2 id="he">hey there</h2>
         <h3>heyyyyyy</h3>
-        <button onclick="but"></button>
+        <button onclick="but">click</button>
     </body>
 </html>
