--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
         <h2 id="he">hey there</h2>
         <h3>heyyyyyy</h3>
         <button onclick="but">click</button>
+
+        <script src="app.js"></script>
     </body>
 </html>
