--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
         <h1>testing out github</h1>
         <h2 id="he">hey there</h2>
         <h3>heyyyyyy</h3>
-        <button onclick="but">click</button>
+        <button onclick="but()">click</button>
 
-        <script src="app.js"></script>
+        <script src="./app.js"></script>
     </body>
 </html>
